<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="appName">pymo</string>
<string name="iconName">pymo</string>

<string name="private_version">1591565712.44</string>



<string name="app_name">pymo</string>
<string name="text_paused_cellular">Would you like to enable downloading over cellular connections? Depending on your data plan, this may cost you money.</string>
<string name="text_paused_cellular_2">If you choose not to enable downloading over cellular connections, the download will automatically resume when wi-fi is available.</string>
<string name="text_button_resume_cellular">Resume download</string>
<string name="text_button_wifi_settings">Wi-Fi settings</string>
<string name="text_button_pause">Pause Download</string>
<string name="text_button_resume">Resume Download</string>
<string name="text_button_cancel">Cancel</string>

<string name="info">pymo 1.2\nby chen_xin_ming\n\n使用方法：\n将游戏数据包解压并放入手机存储中，然后在pymo里找到游戏所在的文件夹，点击即可开始游戏\n\n更新内容：\n- 修复Android 7.0以上的闪退问题\n- 支持外置SD卡游戏读取\n- 存档路径改到内置存储上的Android/data/com.pymo.pymo/files/save\n- 提高Android TV和手柄的兼容性\n- 修复自动播放时不等待语音的问题\n- 修复bgm不循环播放的问题\n\n欢迎访问官方网站了解详情和下载游戏：http://www.pymogames.com</string>
    <string name="info_title">关于 pymo 1.2</string>
    <string name="title_activity_file_chooser">FileChooser</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_config">pymo设置</string>
    <string name="original_ratio">按原游戏画面比例显示</string>
    <string name="keypad_extend">键盘包括菜单键和返回键</string>
    <string name="keypad_horizontal">当原游戏比屏幕宽时自动将键盘置于画面下方</string>
    <string name="player_external">使用外置播放器播放视频</string>
    <string name="mplayer_pressagain">再次点击退出</string>
    <string name="mplayer_invalidformat">视频格式不正确，播放已停止</string>
    <string name="button_ok">确定</string>
    <string name="button_visit_website">访问官网</string>
    <string name="pymo_url">https://www.pymogames.com</string>
    <string name="button_clipboard">复制到剪贴板</string>
    <string name="clipboard_copied">已复制到剪贴板</string>
    <string name="parent_folder">.. 返回上一级文件夹</string>
    <string name="no_sd_permission">无SD卡读写权限，请在手机的系统设置中开启pymo的SD卡读写权限。</string>
    

</resources>