<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
    <TextView
    	android:id="@+id/text2"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_activity_config"
    	/>
    <CheckBox 
    android:id="@+id/original_ratio" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/original_ratio"
    />
    <CheckBox 
    android:id="@+id/keypad_extend" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/keypad_extend"
    />
    <CheckBox 
    android:id="@+id/keypad_horizontal" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/keypad_horizontal"
    />
    <Button
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:layout_marginTop = "6dp"
     android:layout_marginBottom = "6dp"
     android:text="@string/info_title"
     android:id="@+id/about_button" />
</LinearLayout>
